--- a/fem-managesite/style.css
+++ b/fem-managesite/style.css
@@ -35,7 +35,7 @@
     --fs-body: var(--fs-500);
     --fs-primary-heading: var(--fs-900);
     --fs-secondary-heading: var(--fs-800);
-    
+
     --fs-nav: var(--fs-300);
   }
 }
@@ -105,3 +105,68 @@ svg {
     scroll-behavior: auto !important;
   }
 }
+
+/* Utility Classes */
+
+.text-primary-400{
+  color: var(--clr-primary-400);
+}
+.text-accent-400{
+  color: var(--clr-accent-400);
+}
+.text-accent-300{
+  color: var(--clr-accent-300);
+}
+.text-neutral-900{
+  color: var(--clr-neutral-900);
+}
+.text-neutral-100{
+  color: var(--clr-neutral-100);
+}
+
+.bg-primary-400{
+  background-color: var(--clr-primary-400);
+}
+.bg-accent-400{
+  background-color: var(--clr-accent-400);
+}
+.bg-accent-300{
+  background-color: var(--clr-accent-300);
+}
+.bg-neutral-900{
+  background-color: var(--clr-neutral-900);
+}
+.bg-neutral-100{
+  background-color: var(--clr-neutral-100);
+}
+
+.fw-bold{
+  font-weight: var(--fw-bold);
+}
+.fw-semi-bold{
+  font-weight: var(--fw-semi-bold);
+}
+.fw-regular{
+  font-weight: var(--fw-regular);
+}
+
+.fs-primary-heading {
+  font-size: var(--fs-primary-heading);
+}
+.fs-secondary-heading {
+  font-size: var(--fs-secondary-heading);
+}
+
+.fs-300{
+  font-size: var(--fs-300);
+}
+.fs-400{
+  font-size: var(--fs-400);
+}
+.fs-500{
+  font-size: var(--fs-500);
+}
+.fs-600{
+  font-size: var(--fs-600);
+}
+
