--- a/fem-managesite/style.css
+++ b/fem-managesite/style.css
@@ -31,7 +31,8 @@
   --fs-secondary-heading: var(--fs-700);
   --fs-nav: var(--fs-500);
   --fs-button: var(--fs-300);
-
+  
+  --size-100: .2rem;
   --size-200: .25rem;
   --size-200: .5rem;
   --size-300: .75rem;
@@ -117,6 +118,134 @@ svg {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+
+/* General Styling */
+
+body{
+  font-size: var(--fs-body);
+  font-family: var(--ff-body);
+  color: var(--clr-primary-400);
+}
+
+/* Button */
+.button{
+  display: inline-flex;
+  cursor: pointer;
+  text-decoration: none;
+  border: 0;
+  border-radius: 100vmax;
+  padding: 1.25em 2.5em;
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-button);
+  line-height: 1;
+  color:var(--clr-neutral-100);
+  background-color:var(--clr-accent-400);
+  transition-duration: 300ms;
+  box-shadow: 0 1.125em 1em -1em var(--clr-accent-500);
+}
+.button[data-type="inverted"]{
+  background-color:var(--clr-neutral-100);
+  color:var(--clr-accent-400);
+}
+.button:hover, .button:focus-visible{
+  background-color: var(--clr-accent-300);
+}
+.button[data-type="inverted"]:hover, .button[data-type="inverted"]:focus-visible{
+  background-color:var(--clr-neutral-100);
+  color:var(--clr-accent-300);
+}
+
+/* Navigation */
+
+.primary-header{
+  padding-top:var(--size-700);
+}
+
+.nav-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.mobile-nav-toggle{
+  display: none;
+}
+
+.nav-list{
+  font-size: var(--fs-nav);
+}
+
+.nav-list{
+  display: flex;
+  gap: clamp(var(--size-400), 5vw, var(--size-700));
+  font-weight: var(--fw-semi-bold);
+}
+
+.nav-list a{
+  text-decoration: none;
+  color: var(--clr-primary-400);
+}
+.nav-list a:hover,
+.nav-list a:focus{
+  color: var(--clr-accent-400);
+}
+
+/* Mobile Navigation Styling */
+@media (max-width: 50em) {
+  .primary-navigation{
+    display: none;
+    position: fixed;
+    padding: var(--size-700);
+    inset: 7rem var(--size-400) auto;
+    background: var(--clr-neutral-100);
+    border-radius: var(--size-100);
+    box-shadow: 0 0 0.75em rgb(0, 0 ,0 , 0.05);
+  }
+  .primary-header[data-overlay]::before{
+    content: " ";
+    position: fixed;
+    inset: 0;
+    background-image: linear-gradient(rgb(0 0 0 / 0), rgb( 0 0 0 / 0.8));
+  }
+
+  .nav-list {
+    display: grid;
+    gap: var(--size-600);
+    text-align: center;
+    font-weight: var(--fw-bold);
+  }
+
+  .primary-navigation[data-visible]{
+    display: block;
+  }
+
+  .mobile-nav-toggle{
+    display: block;
+    position: fixed;
+    top: var(--size-600);
+    right: var(--size-400);
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    padding: 0.5em;
+  }
+
+  .mobile-nav-toggle .icon-close{
+    display: none;
+  }
+/* Switch Icons */
+  .primary-header[data-overlay] .mobile-nav-toggle .icon-close{
+    display: block;
+  }
+  .primary-header[data-overlay] .mobile-nav-toggle .icon-hamburger{
+    display: none;
+  }
+}
+/*Toggle Style */
+.opened {
+  display: block;
+  position: fixed;
 }
 
 /* Utility Classes */
@@ -207,6 +336,14 @@ svg {
 .padding-block-700{
   padding-block: var(--size-700);
 }
+.display-small-none{
+  display: none;
+}
+@media(min-width: 50em){
+  .display-md-inline-flex{
+    display: inline-flex;
+  }
+}
 
 
 .container{
@@ -228,39 +365,3 @@ svg {
     grid-auto-columns: 1fr;
   }
 }
-
-/* General Styling */
-
-body{
-  font-size: var(--fs-body);
-  font-family: var(--ff-body);
-  color: var(--clr-primary-400);
-}
-
-/* Button */
-.button{
-  cursor: pointer;
-  text-decoration: none;
-  border: 0;
-  border-radius: 100vmax;
-  padding: 1.25em 2.5em;
-  font-weight: var(--fw-bold);
-  font-size: var(--fs-button);
-  line-height: 1;
-  color:var(--clr-neutral-100);
-  background-color:var(--clr-accent-400);
-  transition-duration: 300ms;
-  box-shadow: 0 1.125em 1em -1em var(--clr-accent-500);
-}
-.button[data-type="inverted"]{
-  background-color:var(--clr-neutral-100);
-  color:var(--clr-accent-400);
-}
-.button:hover, .button:focus-visible{
-  background-color: var(--clr-accent-300);
-}
-.button[data-type="inverted"]:hover, .button[data-type="inverted"]:focus-visible{
-  background-color:var(--clr-neutral-100);
-  color:var(--clr-accent-300);
-}
-
