--- a/fem-managesite/style.css
+++ b/fem-managesite/style.css
@@ -155,6 +155,10 @@ p[data-width="wide"]{
   background-color:var(--clr-neutral-100);
   color:var(--clr-accent-400);
 }
+.button[data-shadow="none"]{
+  box-shadow: none;
+}
+
 .button:hover, .button:focus-visible{
   background-color: var(--clr-accent-300);
 }
@@ -255,10 +259,73 @@ p[data-width="wide"]{
   position: fixed;
 }
 
+/* Footer */
+.primary-footer{
+  --logo-color: var(--clr-neutral-100);
+}
+.primary-footer-wrapper{
+  display: grid;
+  gap: var(--size-700);
+  grid-template-areas:
+    'form'
+    'nav'
+    'logo-social';
+}
+
+.primary-footer-logo-social{
+  grid-area: logo-social;
+
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  gap: var(--size-700);
+
+}
+.primary-footer-nav{
+  grid-area: nav;
+}
+.primary-footer-form{
+  grid-area: form;
+  display: grid;
+  align-content: space-between;
+}
+
+.primary-footer-form form{
+  display: flex;
+  gap: var(--size-200);
+}
+
+input:where([type="text"], [type="email"]){
+  border-radius: 100vw;
+  border: 0;
+  padding: var(--size-300) var(--size-400);
+
+}
+
+@media(min-width: 50em){
+  .primary-footer-wrapper{
+    grid-template-areas:
+    "logo-social nav form";
+  }
+
+  .primary-footer-logo-social{
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }  
+}
+
+@media(max-width: 50em){
+  .primary-footer-wrapper > *{
+    margin-inline: auto;
+  }
+}
+
 /* Footer Navigation */
 
 .footer-nav{
   columns: 2;
+  gap: clamp(var(--size-200), 10vw, var(--size-900));
 }
 
 .footer-nav a{
@@ -268,6 +335,35 @@ p[data-width="wide"]{
 }
 .footer-nav a:where(:hover, :focus){
   color: var(--clr-accent-400);
+}
+
+/* social list */
+
+.social-list {
+  display: flex;
+  gap: var(--size-600);
+}
+
+.social-icon{
+  width: var(--size-600);
+  aspect-ratio: 1;
+  fill:var(--clr-neutral-100);
+  transition-duration: 300ms;
+}
+
+.social-list a:is(:hover, :focus) .social-icon{
+  fill: var(--clr-accent-400);
+}
+
+@media (min-width: 50em) {
+
+  .social-list {
+    gap: var(--size-300);
+  }
+
+  .social-icon{
+    width: var(--size-500);
+  }
 }
 
 /* CTA */
