--- a/fem-managesite/style.css
+++ b/fem-managesite/style.css
@@ -393,6 +393,75 @@ input:where([type="text"], [type="email"]){
   
 }
 
+/* Numbered Items */
+
+.numbered-items{
+  counter-reset: count;
+  width: fit-content;
+  margin-inline: auto;
+}
+.numbered-items li {
+  counter-increment: count;
+}
+
+.numbered-items div{
+  display: grid;
+  position: relative;
+  grid-template-columns: min-content 1fr;
+  column-gap: var(--size-400);
+  align-items: center;
+}
+
+.numbered-items-title{
+  grid-row: 1/2;
+  grid-column: 2/3;
+  line-height: 1;
+}
+
+.numbered-items-body {
+  grid-column: 1/ -1;
+}
+
+.numbered-items div::before,
+.numbered-items div::after{
+  height: 40px;
+}
+
+.numbered-items div::before{
+  content: "0" counter(count);
+  display: flex;
+  align-items: center;
+  color: var(--clr-neutral-100);
+  font-weight: var(--fw-bold);
+  background-color: var(--clr-accent-400);
+  padding: 0 var(--size-500);
+  border-radius: 100vw;
+  grid-row: 1/2;
+  grid-column: 1/2;
+}
+
+@media (max-width: 30em){
+  
+  .numbered-items div::after {
+    content:"";
+    display: block;
+    z-index: -1;
+    border-radius: 100vw 0 0 100vw;
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    box-shadow: 5em 0 0 var(--clr-accent-100);
+    background: var(--clr-accent-100);
+  }
+}
+
+
+@media (min-width: 30em) {
+  .numbered-items-body {
+    grid-column: 2/ -1;
+  }
+}
+
+
 /* Utility Classes */
 
 .visually-hidden{
@@ -410,9 +479,9 @@ input:where([type="text"], [type="email"]){
 
 .container{
   --max-width: 1110px ;
-  --padding: 1rem;
+  --container-padding: 1rem;
 
-  width: min(var(--max-width), 100% - (var(--padding) * 2));
+  width: min(var(--max-width), 100% - (var(--container-padding) * 2));
   margin-inline: auto;
 }
 
@@ -447,7 +516,22 @@ input:where([type="text"], [type="email"]){
   margin-top: var(--flow-spacer, 3em);
 }
 
+.text-center{
+  text-align: center;
+}
 
+.text-center p{
+  margin-inline: auto;
+}
+
+@media(max-width: 50em){
+  .text-center-sm-only{
+    text-align: center;
+  }
+  .text-center-sm-only p{
+    margin-inline: auto;  
+  } 
+}
 
 .text-primary-400{
   color: var(--clr-primary-400);
@@ -522,6 +606,11 @@ input:where([type="text"], [type="email"]){
 .padding-block-700{
   padding-block: var(--size-700);
 }
+
+.margin-bottom-700{
+  margin-block-end: var(--size-700);
+}
+
 .display-small-none{
   display: none;
 }
