--- a/fem-managesite/style.css
+++ b/fem-managesite/style.css
@@ -45,7 +45,7 @@
   --size-900: 5rem;
 
 }
-@media (min-width: 50em){
+@media (min-width: 47em){
   :root{
     --fs-body: var(--fs-500);
     --fs-primary-heading: var(--fs-900);
@@ -83,7 +83,8 @@ html:focus-within {
 }
 
 html, body{
-  height: 100%;
+  min-height: 100%;
+  overflow-x: hidden;
 }
 
 /* Set core body defaults */
@@ -204,7 +205,12 @@ p[data-width="wide"]{
 }
 
 /* Mobile Navigation Styling */
-@media (max-width: 50em) {
+@media (max-width: 47em) {
+  .primary-header[data-overlay]{
+    position: relative;
+    z-index: 999;
+  }
+
   .primary-navigation{
     display: none;
     position: fixed;
@@ -235,12 +241,12 @@ p[data-width="wide"]{
   .mobile-nav-toggle{
     display: block;
     position: fixed;
-    top: var(--size-600);
     right: var(--size-400);
     cursor: pointer;
     background: transparent;
     border: 0;
     padding: 0.5em;
+    z-index: 999;
   }
 
   .mobile-nav-toggle .icon-close{
@@ -303,7 +309,7 @@ input:where([type="text"], [type="email"]){
 
 }
 
-@media(min-width: 50em){
+@media(min-width: 47em){
   .primary-footer-wrapper{
     grid-template-areas:
     "logo-social nav form";
@@ -316,7 +322,7 @@ input:where([type="text"], [type="email"]){
   }  
 }
 
-@media(max-width: 50em){
+@media(max-width: 47em){
   .primary-footer-wrapper > *{
     margin-inline: auto;
   }
@@ -356,7 +362,7 @@ input:where([type="text"], [type="email"]){
   fill: var(--clr-accent-400);
 }
 
-@media (min-width: 50em) {
+@media (min-width: 47em) {
 
   .social-list {
     gap: var(--size-300);
@@ -374,7 +380,7 @@ input:where([type="text"], [type="email"]){
   isolation: isolate;
   text-align: center;
 }
-@media(min-width: 50em){
+@media(min-width: 47em){
   .cta{
     text-align: left;
   }
@@ -491,7 +497,7 @@ input:where([type="text"], [type="email"]){
     }
   }
 
-  @media(min-width: 50em){ 
+  @media(min-width: 47em){ 
     .slider > * {
       width: 35%;
     }
@@ -539,6 +545,61 @@ input:where([type="text"], [type="email"]){
     background: var(--clr-accent-400);
   }
 
+  /* imgage with blog hero */
+  @media(max-width: 47em){
+    .hero-image{
+      /* position: relative; */
+      order: -1;
+    } 
+  }
+  .hero-image::before{
+    content:'';
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    top: 0;
+    width: 87%;
+    max-height: 70vh;
+    aspect-ratio: 1 / 1.2;
+    background-image: url(images/bg-tablet-pattern.svg);
+    background-position: bottom left;
+    background-repeat: no-repeat;
+  }
+  @media (min-width: 47em){
+    .hero-image::before{
+      width: 45%;
+    }
+  }
+
+  /* Sales points */
+  .sales-points{
+    position: relative;
+  }
+
+  .sales-points::before{
+    content:'';
+    position: absolute;
+    z-index: -1;
+    left: 70%;
+    top: -50vh;
+    width: 60%;
+    max-height: 70vh;
+    aspect-ratio: 1 / 1.2;
+    background-image: url(images/bg-tablet-pattern.svg);
+    background-position: bottom left;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+@media(min-width: 47em){
+  .sales-points::before{
+    left: -20vw;
+    top: 45vh;
+    width: 100%;
+    max-height: 90vh;
+    aspect-ratio: 1 / 1.2;
+    background-position: bottom left;
+  }
+}
 /* Utility Classes */
 
 .visually-hidden{
@@ -567,7 +628,7 @@ input:where([type="text"], [type="email"]){
   gap: 1rem;
 }
 
-@media(min-width: 50em){
+@media(min-width: 47em){
   .even-columns{
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
@@ -582,7 +643,7 @@ input:where([type="text"], [type="email"]){
   justify-self: end;
 }
 
-@media(min-width: 50em){
+@media(min-width: 47em){
   .justify-self-end-md{
     justify-self: end;
   }
@@ -601,7 +662,7 @@ input:where([type="text"], [type="email"]){
   margin-inline: auto;
 }
 
-@media(max-width: 50em){
+@media(max-width: 47em){
   .text-center-sm-only{
     text-align: center;
   }
@@ -687,11 +748,14 @@ input:where([type="text"], [type="email"]){
 .margin-bottom-700{
   margin-block-end: var(--size-700);
 }
+.mx-auto{
+  margin-inline: auto;
+}
 
 .display-small-none{
   display: none;
 }
-@media(min-width: 50em){
+@media(min-width: 47em){
   .display-md-inline-flex{
     display: inline-flex;
   }
